Make the SDK goose aware

--- a/crates/matrix-sdk/Cargo.toml
+++ b/crates/matrix-sdk/Cargo.toml
@@ -62,6 +62,7 @@ experimental-widgets = ["dep:language-tags", "dep:uuid"]
 
 docsrs = ["e2e-encryption", "sqlite", "indexeddb", "sso-login", "qrcode", "image-proc"]
 
+load-testing = ["dep:goose", "dep:goose-eggs"]
 [dependencies]
 anyhow = { workspace = true, optional = true }
 anymap2 = "0.13.0"
@@ -112,6 +113,8 @@ urlencoding = "2.1.3"
 uuid = { version = "1.4.1", features = ["serde", "v4"], optional = true }
 vodozemac = { workspace = true }
 zeroize = { workspace = true }
+goose = { git = "https://github.com/S7evinK/goose", rev = "e1a151a3f2029eef9239992c419455e0bd2f1a11", optional = true }
+goose-eggs =  { git = "https://github.com/tag1consulting/goose-eggs", rev = "428939d1634acd3224d1f635433eee56ab98e605", optional = true}
 
 [dependencies.image]
 version = "0.25.1"
